test/functions/default-arguments/default-argument-ref-with-const-default.chpl
const seven = 7;
proc foo(ref x = seven) { x = 17; writeln(seven); }
foo();
writeln(seven);
